--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-web3
-aiohttp
-aiohttp-socks
-fake-useragent
-eth-account
-eth-utils
-eth-abi
-colorama
-pytz
+web3==7.11.1
+aiohttp==3.11.10
+aiohttp-socks==0.9.1
+fake-useragent==1.5.1
+eth-account==0.13.7
+eth-utils==5.3.0
+eth-abi==5.2.0
+colorama==0.4.6
+pytz==2024.1
